Actual LauncherUI v1.1 online Made two secondary fragments more generic with naming

--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -1,12 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.grailcloset.gcv4.UI.Fragmentsnts.ClosetFragment">
+    android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Watchlist"
-        android:id="@+id/watchlistFragmentLoggedInText"/>
-
+        android:text="@string/second_fragment_text"
+        android:id="@+id/secondFragmentTextView"/>
 
 </FrameLayout>
