--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -1,12 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="com.grailcloset.gcv4.UI.Fragmentsnts.ClosetFragment">
+    android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Closet"
-        android:id="@+id/closetFragmentLoggedInText"/>
-
+        android:text="@string/first_fragment_text"
+        android:id="@+id/firstFragmentTextView"/>
 
 </FrameLayout>
