--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,9 +3,24 @@
     android:layout_height="match_parent">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/first_fragment_text"
-        android:id="@+id/firstFragmentTextView"/>
+        android:orientation="vertical"
+        tools:context=".LinearLayout" >
+
+        <TextView android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/first_fragment_text"
+            android:id="@+id/firstFragmentTextView"/>
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/first_button_text"
+            android:id="@+id/firstFragmentButton"/>
+    </LinearLayout>
+
 
 </FrameLayout>
